bonus/demo/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pissenlit
spec:
  selector:
    matchLabels:
      app: pissenlit
  replicas: 3
  template:
    metadata:
      labels:
        app: pissenlit
    spec:
      containers:
        - name: pissenlit
          image: stelirion/pissenlit:v1.0.1
          ports:
            - containerPort: 8080
