bonus/demo/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pissenlit
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: pissenlit
